Add flake8-vim plugin to check Python code's PEP-8 compliance.

--- a/configuration.json
+++ b/configuration.json
@@ -120,6 +120,10 @@
                 "windows": "vimfiles/ftplugin/cuda.vim"
             }
         },
+        ".config/flake8": {
+            "source": "flake8.config",
+            "compatible_platforms": ["linux", "mac", "windows"]
+        },
         ".hgrc": {
             "source": "hgrc",
             "compatible_platforms": ["linux", "mac", "windows"],
