Fix italics in new Linux machines.

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ set-window-option -g utf8 on
 
 # Terminal colors
 # If it does not work, alias tmux='tmux -2' in your shell configuration.
-set-option -g default-terminal "screen-256color-italics"
+set-option -g default-terminal "xterm-256color-italics"
 set-option -g terminal-overrides "*256col*:colors=256"
 
 # Disable mouse features
