Reduce unexpected delays with Esc + arrow/home/end keys in vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,6 +35,9 @@ set -g mouse-select-window off
 # Let function keys to work
 setw -g xterm-keys on
 
+# Remove delays when hitting Esc + arrow keys in Vim
+set -s escape-time 0
+
 # Remove default binding since we're replacing
 unbind %
 
