--- a/tmux.conf
+++ b/tmux.conf
@@ -27,10 +27,12 @@ set-option -g default-terminal "tmux-256color"
 set-option -g terminal-overrides "*256col*:colors=256"
 
 # Disable mouse features
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+#setw -g mode-mouse off
+#set -g mouse-select-pane off
+#set -g mouse-resize-pane off
+#set -g mouse-select-window off
+set -g mouse-utf8 off
+set -g mouse off
 
 # Let function keys to work
 setw -g xterm-keys on
