Add support for true-color terminals.

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,21 +17,17 @@ unbind d
 bind C-d detach
 bind d detach
 
-# UTF-8
-set-option -g status-utf8 on
-set-window-option -g utf8 on
-
 # Terminal colors
 # If it does not work, alias tmux='tmux -2' in your shell configuration.
 set-option -g default-terminal "tmux-256color"
-set-option -g terminal-overrides "*256col*:colors=256"
+set-option -ga terminal-overrides ",st-256color:Tc"
+#set-option -g terminal-overrides "*256col*:colors=256"
 
 # Disable mouse features
 #setw -g mode-mouse off
 #set -g mouse-select-pane off
 #set -g mouse-resize-pane off
 #set -g mouse-select-window off
-set -g mouse-utf8 off
 set -g mouse off
 
 # Let function keys to work
