--- a/tmux.conf
+++ b/tmux.conf
@@ -20,8 +20,11 @@ bind d detach
 # Terminal colors
 # If it does not work, alias tmux='tmux -2' in your shell configuration.
 set-option -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ",st-256color:Tc"
+#set-option -ga terminal-overrides ",st-256color:Tc"
 #set-option -g terminal-overrides "*256col*:colors=256"
+%if _platform == "mac":
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+%end
 
 # Disable mouse features
 #setw -g mode-mouse off
