tmux: Change prefix key and preserve default vsplit shortcut.

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,10 +2,10 @@
 # Some options are from Jaeho Shin.
 # (reference: https://github.com/netj/dotfiles/blob/master/.tmux.conf)
 
-# Set the action key as Ctrl+A like screen instead of original Ctrl+B.
-set-option -g prefix C-a
-bind-key C-a last-window
-bind-key a send-keys C-a
+# Set the action key as Ctrl+Q.
+set-option -g prefix C-q
+bind-key C-q last-window
+bind-key q send-keys C-q
 
 unbind C-c
 unbind c
@@ -39,11 +39,8 @@ setw -g xterm-keys on
 # Remove delays when hitting Esc + arrow keys in Vim
 set -s escape-time 0
 
-# Remove default binding since we're replacing
-unbind %
-
-# Ctrl+A, | splits the window horizontally.
-# Ctrl+A, _ splits the window vertically.
+# <prefix>+" and <prefix>+_ splits the window horizontally.
+# <prefix>+% and <prefix>+| splits the window vertically.
 bind | split-window -h
 bind _ split-window -v
 
