--- a/tmux.conf
+++ b/tmux.conf
@@ -19,9 +19,10 @@ bind d detach
 
 # Terminal colors
 # If it does not work, alias tmux='tmux -2' in your shell configuration.
+# override inner $TERM
 set-option -g default-terminal "tmux-256color"
-#set-option -ga terminal-overrides ",st-256color:Tc"
-#set-option -g terminal-overrides "*256col*:colors=256"
+# override outer $TERM for true-color support (tmux 2.3+)
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 %if _platform == "mac":
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 %end
