tmux: Disable thundering activity notification.

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,6 +51,7 @@ set-option -g visual-activity on
 set-window-option -g mode-keys vi
 #set-window-option -g automatic-rename
 set-window-option -g monitor-activity on
+set-option -g visual-activity off
 
 set-option -g status-bg colour35
 set-option -g status-fg colour236
