tmux: Add shortcuts to switch between windows.

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,10 @@ unbind d
 bind C-d detach
 bind d detach
 
+# Tip: to select windows by index, use <prefix> '
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
 # Terminal colors
 # If it does not work, alias tmux='tmux -2' in your shell configuration.
 # override inner $TERM
