tmux: Unbind Ctrl+L before binding to avoid conflict with default.

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,8 @@ bind C-d detach
 bind d detach
 
 # Tip: to select windows by index, use <prefix> '
+unbind C-h
+unbind C-l
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
