--- a/tmux.conf
+++ b/tmux.conf
@@ -33,12 +33,9 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 %end
 
-# Disable mouse features
-#setw -g mode-mouse off
-#set -g mouse-select-pane off
-#set -g mouse-resize-pane off
-#set -g mouse-select-window off
-set -g mouse off
+# Enable mouse features
+set -g mouse on
+set -g focus-events on
 
 # Let function keys to work
 setw -g xterm-keys on
