tmux: Apply aggressive-resize option
* Resizing terminals over mosh where remote tmux is running sometimes
  does not work without this option.

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,6 +54,7 @@ set-option -g visual-activity on
 set-window-option -g mode-keys vi
 #set-window-option -g automatic-rename
 set-window-option -g monitor-activity on
+set-window-option -g aggressive-resize on
 set-option -g visual-activity off
 
 set-option -g status-bg colour35
