--- a/tmux.conf
+++ b/tmux.conf
@@ -28,7 +28,7 @@ bind -r C-l select-window -t :+
 # override inner $TERM
 set-option -g default-terminal "tmux-256color"
 # override outer $TERM for true-color support (tmux 2.3+)
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -as terminal-overrides ",xterm-256color:Tc,gnome*:RGB"
 %if _platform == "mac":
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 %end
@@ -59,13 +59,21 @@ set-option -g visual-activity off
 
 set-option -g status-bg colour35
 set-option -g status-fg colour236
-set-option -g status-left-fg colour194
-set-option -g status-left-attr bright
-set-option -g status-right-fg colour191
+
+# For tmux 2.8 or earlier
+# set-option -g status-left-fg colour194
+# set-option -g status-left-attr bright
+# set-option -g status-right-fg colour191
+# set-window-option -g window-status-current-fg white
+# set-window-option -g window-status-current-attr bright
+# set-window-option -g window-status-current-bg colour161
+
+# For tmux 2.9 or later
+set-option -g status-left-style fg=colour194,bright
+set-option -g status-right-style fg=colour191
+set-window-option -g window-status-current-style fg=white,bg=colour161,bright
+
 set-option -g history-limit 5000
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-attr bright
-set-window-option -g window-status-current-bg colour161
 
 # redisplay ^L l
 unbind ^L
