fix: Let tmux.conf pass through templating
* Even when the template variables are empty, the target dotfile
  may need to be processed as templates to generate different contents
  depending on "_platform".
* Fix bottle_template.py to work with Python 3.10 that forces migration
  of collection ABCs from collections to collections.abc.
* Fix further indentation error in configuration.json.

--- a/configuration.json
+++ b/configuration.json
@@ -32,7 +32,8 @@
         },
         ".tmux.conf": {
             "source": "tmux.conf",
-            "compatible_platforms": ["linux", "mac", "codespace"]
+            "compatible_platforms": ["linux", "mac", "codespace"],
+            "template_vars": []
         },
         ".inputrc": {
             "source": "inputrc",
@@ -96,8 +97,8 @@
                     "vim_textwidth": 75,
                     "term_colorscheme": "xterm-256color",
                     "username": "Joongi Kim"
-		}
-	    },
+                }
+            },
             "linux": {
                 "scripts": [
                     "sudo apt install -y htop vim git-core",
