--- a/configuration.json
+++ b/configuration.json
@@ -88,7 +88,7 @@
 	    "group": "neovim",
             "compatible_platforms": ["linux", "mac", "codespace"]
         },
-        ".config/nvim/lua/config.vim": {
+        ".config/nvim/lua/config.lua": {
             "source": "nvim/lua/config.lua",
 	    "group": "neovim",
             "compatible_platforms": ["linux", "mac", "codespace"]
