--- a/tmux.conf
+++ b/tmux.conf
@@ -26,9 +26,11 @@ bind -r C-l select-window -t :+
 # Terminal colors
 # If it does not work, alias tmux='tmux -2' in your shell configuration.
 # override inner $TERM
-set-option -g default-terminal "xterm-256color"
+set-option -g default-terminal "screen-256color"
 # override outer $TERM for true-color support (tmux 2.3+)
 set-option -as terminal-overrides ",xterm-256color:Tc,gnome*:RGB"
+# override outer $TERM for true-color support (tmux 3.2+)
+set-option -as terminal-features ",xterm-256color:RGB"
 %if _platform == "mac":
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 %end
