term: Use the ultimate source of terminfo

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,10 +27,7 @@ bind -r C-l select-window -t :+
 # If it does not work, alias tmux='tmux -2' in your shell configuration.
 # override inner $TERM
 set-option -g default-terminal "tmux-256color"
-# override outer $TERM for true-color support (tmux 2.3+)
-set-option -as terminal-overrides ",xterm-256color:Tc,gnome*:RGB"
-# override outer $TERM for true-color support (tmux 3.2+)
-set-option -as terminal-features ",xterm-256color:RGB"
+set-option -a terminal-overrides ",*256col*:Tc:RGB"
 %if _platform == "mac":
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 %end
