--- a/configuration.json
+++ b/configuration.json
@@ -84,12 +84,7 @@
             }
         },
         ".config/nvim/init.vim": {
-            "source": "nvim/init.vim",
-            "group": "neovim",
-            "compatible_platforms": ["linux", "mac", "codespace"]
-        },
-        ".config/nvim/lua/config.lua": {
-            "source": "nvim/lua/config.lua",
+            "source": "nvim/init.lua",
             "group": "neovim",
             "compatible_platforms": ["linux", "mac", "codespace"]
         },
