nvim,tmux: Enable copy to the local clipboard via the OSC 52 sequences

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,6 +55,7 @@ set-window-option -g mode-keys vi
 set-window-option -g monitor-activity on
 set-window-option -g aggressive-resize on
 set-option -g visual-activity off
+set-option -g set-clipboard on
 
 set-option -g status-bg colour35
 set-option -g status-fg colour236
