--- a/configuration.json
+++ b/configuration.json
@@ -96,6 +96,11 @@
             "group": "neovim",
             "compatible_platforms": ["linux", "mac", "codespace"]
         },
+        ".config/nvim/coc-settings.json": {
+            "source": "nvim/coc-settings.json",
+            "group": "neovim",
+            "compatible_platforms": ["linux", "mac", "codespace"]
+        },
         ".config/wezterm/wezterm.lua": {
             "source": "wezterm/config.lua",
             "group": "wezterm",
