--- a/tmux.conf
+++ b/tmux.conf
@@ -56,6 +56,7 @@ set-window-option -g monitor-activity on
 set-window-option -g aggressive-resize on
 set-option -g visual-activity off
 set-option -g set-clipboard on
+set-option -g allow-passthrough on
 
 set-option -g status-bg colour35
 set-option -g status-fg colour236
