--- a/configuration.json
+++ b/configuration.json
@@ -96,6 +96,11 @@
             "group": "neovim",
             "compatible_platforms": ["linux", "mac", "codespace"]
         },
+        ".config/nvim/lua/auto-theme.lua": {
+            "source": "nvim/lua/auto-theme.lua",
+            "group": "neovim",
+            "compatible_platforms": ["linux", "mac", "codespace"]
+        },
         ".config/nvim/coc-settings.json": {
             "source": "nvim/coc-settings.json",
             "group": "neovim",
@@ -103,6 +108,11 @@
         },
         ".config/wezterm/wezterm.lua": {
             "source": "wezterm/config.lua",
+            "group": "wezterm",
+            "compatible_platforms": ["mac"]
+        },
+        ".config/wezterm/theme.lua": {
+            "source": "wezterm/theme.lua",
             "group": "wezterm",
             "compatible_platforms": ["mac"]
         },
